# OTUS-python-basic

./: .pylintrc  dev_requirements.txt  requirements.txt
.github/workflows/: pylint.yml  run_test_project.yml  run_tests.yml
homework_01/: main.py
homework_02/: base.py  car.py  plane.py
homework_03/: Dockerfile  pyproject.toml
homework_03/my_new_app/: app.py
homework_04/: __init__.py  docker-compose.yml  jsonplaceholder_requests.py  main.py  models.py  pyproject.toml  requirements.txt
homework_05/: app.py  pyproject.toml
homework_05/templates/: about.html  base.html
homework_05/views/: __ini__.py  about.py
homework_06/: Dockerfile  README.md  docker-compose.yml  prestart.sh  pyproject.toml
homework_06/my_app/: app.py  config.py
homework_06/my_app/migrations/: alembic.ini
homework_06/my_app/migrations/versions/: 2024_06_17_1639-db3c1f169771_cteate_products_table.py
homework_06/my_app/models/: __init__.py  database.py  product.py
homework_06/my_app/templates/: about.html  base.html  footer.html  navbar.html
homework_06/my_app/templates/products/: add.html  back-to-list.html  delete.html  details.html  list.html
homework_06/my_app/views/about/: about.py
homework_06/my_app/views/products/: __init__.py  crud.py  views.py
homework_07/: .pylintrc  Makefile  README.md  dev_requirements.txt  manage.py  pytest.ini  requirements.txt
homework_07/addresses/: forms.py  models.py  urls.py  views.py
homework_07/meters/: admin.py  forms.py  models.py  urls.py  views.py
homework_07/templates/: base.html
homework_07/users/: forms.py  models.py  (+2 more)
(+48 files in other folders)
