[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
sqlalchemy = "^2.0.29"
psycopg2 = "^2.9.9"
flask-migrate = "^4.0.7"
psycopg = {extras = ["binary", "pool"], version = "^3.1.19"}

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"